--- a/package.json
+++ b/package.json
@@ -1,21 +1,13 @@
 {
-  "name": "photo-website",
+  "name": "photo-gallery-upload",
   "version": "1.0.0",
-  "description": "Personal Photo Upload Website with Sidebar and Gallery",
+  "description": "A simple image upload server",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node server.js"
   },
-  "keywords": ["photo", "upload", "gallery", "express", "multer"],
-  "author": "Your Name",
-  "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
-    "multer": "^1.4.5-lts.1",
-    "path": "^0.12.7"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
+    "multer": "^1.4.5-lts.1"
   }
 }
